--- a/webinterface.awxi/ui.default/css/layout.css
+++ b/webinterface.awxi/ui.default/css/layout.css
@@ -230,6 +230,50 @@ div.ui-slider-vertical a.ui-slider-handle {
 #location ul li a:hover {
 	color: #ffbb00;
 }
+.ui-tabs {
+    padding: 0.2em;
+    position: relative;
+}
+.ui-tabs .ui-tabs-nav {
+    margin: 0;
+    padding: 0.2em 0.2em 0;
+}
+.ui-tabs .ui-tabs-nav li {
+	-moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;
+    border-bottom: 0 none !important;
+    float: left;
+	background-color: #606060;
+    list-style: none outside none;
+    margin: 0 0.2em 10px 0;
+    padding: 0;
+    position: relative;
+    top: 1px;
+    white-space: nowrap;
+}
+.ui-tabs .ui-tabs-nav li a {
+    float: left;
+    padding: 0.5em 1em;
+    text-decoration: none;
+}
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected {
+    margin-bottom: 0;
+}
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a {
+    cursor: text;
+}
+.ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a {
+    cursor: pointer;
+	color: #fff
+}
+.ui-tabs .ui-tabs-panel {
+    background: none repeat scroll 0 0 transparent;
+    border-width: 0;
+    display: block;
+	clear: left;
+}
+.ui-tabs .ui-tabs-hide {
+    display: none !important;
+}
 #accordion {
     background-color: rgba(0,0,0,0.7);
 	background-attachment: fixed;
@@ -310,6 +354,9 @@ span.miniIcon {
 	display: block; height: 16px; width: 16px;
 	background: url('../images/mini_buttons.png') no-repeat;
 }
+span.playnext {
+    background-position: -112px top;
+}
 span.enqueue { background-position: left top; }
 span.play { background-position: -32px 0px; }
 span.remove { background-position: -16px 0; }
@@ -333,6 +380,9 @@ div.folderLinkWrapper a.button:hover span.remove { background-position: -16px -1
 div.folderLinkWrapper span.playlistmove:hover {
 	float: left;
     background-position: -64px -16px;
+}
+div.folderLinkWrapper span.playnext:hover {
+    background-position: -112px -16px;
 }
 div.folderLinkWrapper a.button:hover span.unwatched {
     background-position: -80px -16px;
@@ -398,7 +448,12 @@ div.folderLinkWrapper:hover a.button:hover { background-image: none; background-
 div.folderLinkWrapper a.button:hover span.information {
     background-position: -48px -16px;
 }
-
+img.thumb {
+	-moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;
+	border: 2px solid #575757;
+	height: 125px;
+	width: 125px;
+}
 img.epWatched {
 	position:relative; 
 	top:0px; 
@@ -417,12 +472,6 @@ img.thumbFanart {
 }
 img.thumbFanart:hover{
 	border: 1px solid #A0E312;
-}
-img.thumb {
-	-moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;
-	border: 2px solid #575757;
-	height: 125px;
-	width: 125px;
 }
 img.thumbPosterLarge {
     height: 280px;
@@ -468,6 +517,35 @@ div.movietags {
 	display: table-cell;
 	width: 580px;
 }
+#multiOpenAccordion {
+    background-color: rgba(0,0,0,0.7);
+	background-attachment: fixed;
+	background-position: 0 170px;
+	background-repeat: no-repeat;
+	background-size: contain;
+}
+.multiOpenAccordion-header {
+	border-top: 1px solid #ABABAB;
+	color: #ddd;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	height: 32px;
+	padding-left: 5px;
+	background-color: rgba(20,20,20,0.7);
+}
+.multiOpenAccordion-header a {
+	position: relative;
+	top: 20%;
+    color: #FFFFFF;
+}
+.multiOpenAccordion-content {
+	background-color: rgba(0,0,0,0.7);
+	border-top: 1px solid #ABABAB;
+	font-size: 14px;
+	padding: 5px;
+	min-height: 300px; 
+}
+
 #accordion {
     background-color: rgba(0,0,0,0.7);
 	background-attachment: fixed;
@@ -1204,12 +1282,17 @@ fieldset {
 	background-color: #808080;
 	margin-bottom: 10px;
 }
-
+fieldset.ui_views {
+	width: 45%;
+	float: left;
+	margin-right: 10px;
+}
 fieldset.ui_settings {
 	float: left;
 	margin-right: 10px;
 }
 fieldset.ui_albums {
+	width: 45%;
     float: left;
     margin-right: 10px;
 }
@@ -1241,7 +1324,15 @@ div.findBox {
 div.findBox input { width: 140px; margin: 5px; }
 
 div.findKeywords { display: none; }
-
+div.playtime {
+    background-color: rgba(0,0,0,0.8);
+	width: 13%;
+	color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+	border-radius: 3px 3px 3px 3px;
+}
 h1.findBoxTitle {
 	font-size: 14px;
 	color: #eeeeee;
